fix: fix canvas overflow on sm

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -415,3 +415,7 @@ textarea {
     }
   }
   
+
+#backgroundCanvas {
+    object-fit: contain;
+}
